GNOME Bugzilla – Bug 709079
rtpgstpay: Leaks memory
Last modified: 2013-10-02 09:32:00 UTC
Created attachment 256066 [details] [review] Fixes a small memory leak when removing links from the list of pending buffers rtpgstpay leaks GList links for the list of pending buffers
commit 93d5e182d213ddbee312c5448c0e0ea7adebb722 Author: Ognyan Tonchev <ognyan@axis.com> Date: Mon Sep 30 12:24:32 2013 +0200 rtpgstpay: Fix memory leak We were leaking the GList nodes of the pending buffers. https://bugzilla.gnome.org/show_bug.cgi?id=709079
Fixed I guess?